--- a/www/index.html
+++ b/www/index.html
@@ -112,6 +112,10 @@
                          --><div class="menu-item">
                                 <input type="checkbox" id="option-drawn-circles"/>
                                 <label for="option-drawn-circles" class="checkbox">Drawn Circles</label>
+                                <div class="btn-toggle">
+                                    <input id="toggle-1" type="checkbox"></input>
+                                    <label for="toggle-1"></label>
+                                </div>
                             </div><!--
                          --><div class="menu-item">
                                 <input type="checkbox" id="option-placed-wards"/>
