--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
             <a href="javascript:void(0)" id="menu-left-close-btn" class="btn-close">&times;</a>
             <div class="menu-contents">
                 <div class="menu-item">
-                    <input type="radio" name="mode" value="navigate" id="navigateToggle" checked="checked" />
+                    <input type="radio" name="mode" value="navigate" id="navigateToggle" checked />
                     <label for="navigateToggle" class="checkbox">Navigate</label>
                 </div>
                 <div class="menu-item">
@@ -44,7 +44,7 @@
                             <label for="observer-option" class="checkbox">Observer</label>
                         </div><!--
                      --><div class="menu-item inline">
-                            <input type="radio" name="ward-type" value="sentry" id="sentry-option"  checked="checked" />
+                            <input type="radio" name="ward-type" value="sentry" id="sentry-option"  checked />
                             <label for="sentry-option" class="checkbox">Sentry</label>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                     <label for="measureToggle" class="checkbox">Measure</label>
                     <div class="menu-item-group sub-menu"><!--
                      --><div class="menu-item inline">
-                            <input type="radio" name="measure-type" value="line" id="line-option"  checked="checked" />
+                            <input type="radio" name="measure-type" value="line" id="line-option"  checked />
                             <label for="line-option" class="checkbox">Line</label>
                         </div><!--
                      --><div class="menu-item inline">
@@ -101,7 +101,7 @@
     <div id="menu-right" class="menu-panel collapsed-horizontal">
         <div class="menu-panel-inner">
             <a href="javascript:void(0)" id="menu-right-close-btn" class="btn-close">&times;</a>
-            <input type="radio" id="menu-right-back-btn" name="right-menu" value="back" checked="checked" />
+            <input type="radio" id="menu-right-back-btn" name="right-menu" value="back" checked />
             <label id="back-btn" class="btn-back" for="menu-right-back-btn">&#x2190;</label>
             <div class="back-group">
                 <div class="menu-contents">
@@ -118,23 +118,23 @@
                                 </div>
                             </div><!--
                          --><div class="menu-item">
-                                <input type="checkbox" id="option-placed-wards"/>
+                                <input type="checkbox" id="option-placed-wards" checked />
                                 <label for="option-placed-wards" class="checkbox">Placed Wards</label>
                             </div><!--
                          --><div class="menu-item">
-                                <input type="checkbox" id="option-dayVision"/>
+                                <input type="checkbox" id="option-dayVision" checked />
                                 <label for="option-dayVision" class="checkbox">Day Vision Range</label>
                             </div><!--
                          --><div class="menu-item">
-                                <input type="checkbox" id="option-nightVision"/>
+                                <input type="checkbox" id="option-nightVision" checked />
                                 <label for="option-nightVision" class="checkbox">Night Vision Range</label>
                             </div><!--
                          --><div class="menu-item">
-                                <input type="checkbox" id="option-trueSight"/>
+                                <input type="checkbox" id="option-trueSight" checked />
                                 <label for="option-trueSight" class="checkbox">True Sight Range</label>
                             </div><!--
                          --><div class="menu-item">
-                                <input type="checkbox" id="option-attackRange"/>
+                                <input type="checkbox" id="option-attackRange" checked />
                                 <label for="option-attackRange" class="checkbox">Attack Range</label>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                         <label for="base-menu-toggle" class="root checkbox inverse">Base Layers</label>
                         <div id="base-menu" class="menu-item-group sub-menu"><!--
                          --><div class="menu-item">
-                                <input type="radio" name="base-type" value="700" id="base-700-option" checked="checked" />
+                                <input type="radio" name="base-type" value="700" id="base-700-option" checked />
                                 <label for="base-700-option" class="checkbox">7.00</label>
                                 <div id="base-700-menu" class="menu-item-group sub-menu"></div>
                             </div><!--
