--- a/www/index.html
+++ b/www/index.html
@@ -120,22 +120,6 @@
                          --><div class="menu-item">
                                 <input type="checkbox" id="option-placed-wards" checked />
                                 <label for="option-placed-wards" class="checkbox">Placed Wards</label>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="checkbox" id="option-dayVision" checked />
-                                <label for="option-dayVision" class="checkbox">Day Vision Range</label>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="checkbox" id="option-nightVision" checked />
-                                <label for="option-nightVision" class="checkbox">Night Vision Range</label>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="checkbox" id="option-trueSight" checked />
-                                <label for="option-trueSight" class="checkbox">True Sight Range</label>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="checkbox" id="option-attackRange" checked />
-                                <label for="option-attackRange" class="checkbox">Attack Range</label>
                             </div>
                         </div>
                     </div>
@@ -148,6 +132,28 @@
                         <input type="radio" id="object-menu-toggle" name="right-menu" value="object" />
                         <label for="object-menu-toggle" class="root checkbox inverse">Neutral</label>
                         <div id="object-menu" class="menu-item-group sub-menu"></div>
+                    </div>
+                    <div class="menu-item">
+                        <input type="radio" id="vision-menu-toggle" name="right-menu" value="vision" />
+                        <label for="vision-menu-toggle" class="root checkbox inverse">Vision Range</label>
+                        <div id="vision-menu" class="menu-item-group sub-menu"><!--
+                         --><div class="menu-item">
+                                <input type="checkbox" id="option-dayVision" checked />
+                                <label for="option-dayVision" class="checkbox">Day Vision</label>
+                            </div><!--
+                         --><div class="menu-item">
+                                <input type="checkbox" id="option-nightVision" checked />
+                                <label for="option-nightVision" class="checkbox">Night Vision</label>
+                            </div><!--
+                         --><div class="menu-item">
+                                <input type="checkbox" id="option-trueSight" checked />
+                                <label for="option-trueSight" class="checkbox">True Sight</label>
+                            </div><!--
+                         --><div class="menu-item">
+                                <input type="checkbox" id="option-attackRange" checked />
+                                <label for="option-attackRange" class="checkbox">Attack Range</label>
+                            </div>
+                        </div>
                     </div>
                     <div class="menu-item">
                         <input type="radio" id="base-menu-toggle" name="right-menu" value="base" />
