--- a/www/index.html
+++ b/www/index.html
@@ -175,6 +175,15 @@
             </div>
         </div>
     </div>
+    <div id="timer" class="slideUp">
+        <div id="timer-content" class="message-content">
+            <div id="timer-time"></div>
+            <button id="timer-stop">&#9724;</button>
+            <button id="timer-playPause">&#9658;</button>
+            <button id="timer-faster">&#9193;</button>
+            <button id="timer-slower">&#9194;</button>
+        </div>
+    </div>
     <div id="notification" class="slideUp">
         <div id="notification-content" class="message-content"></div>
     </div>
