--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,7 @@
     <meta name="author" content="devilesk">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-
-    <link rel="stylesheet" href="node_modules/openlayers/dist/ol.css" type="text/css">
+    
     <link rel="stylesheet" href="app.css" type="text/css">
   </head>
   <body>
@@ -198,8 +197,8 @@
         <a href="javascript:void(0)" id="info-close-btn" class="btn-close">&times;</a>
         <div id="info-content" class="message-content"></div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol-debug.js"></script>
-    <!--<script src="../ol-custom.js"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol-debug.js"></script>-->
+    <script src="ol-custom.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
