--- a/www/help.html
+++ b/www/help.html
@@ -40,3 +40,15 @@
 </ul>
 <h2 id="right-overlay-menu">Right Overlay Menu</h2>
 <p>Toggle map overlays.</p>
+<ul>
+<li><p><strong>Overlays</strong></p>
+</li>
+<li><p><strong>Structures</strong></p>
+</li>
+<li><p><strong>Neutral</strong></p>
+</li>
+<li><p><strong>Vision Range</strong></p>
+</li>
+<li><p><strong>Base Layers</strong></p>
+</li>
+</ul>
