--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,12 @@
     <meta name="author" content="devilesk">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
+    <!-- @if NODE_ENV!='production' -->
     <link rel="stylesheet" href="app.css" type="text/css">
+    <!-- @endif -->
+    <!-- @if NODE_ENV='production' !>
+    <link rel="stylesheet" href="app-<!-- @echo COMMIT_HASH !>.min.css" type="text/css">
+    <!-- @endif -->
   </head>
   <body>
     <div id="map"></div>
@@ -207,61 +212,7 @@
     <div id="help" class="modal modal-close">
         <div class="modal-content">
             <span id="help-close" class="close">&times;</span>
-            <h2 id="left-toolbar">Left Toolbar</h2>
-            <ul>
-            <li><p><strong>Settings Menu</strong> (cog)</p>
-            </li>
-            <li><p><strong>Zoom In/Out</strong> (+/-)</p>
-            </li>
-            <li><p><strong>Mode Options</strong></p>
-            <ul>
-            <li><strong>Navigation</strong>- Toggle tree overlay on (quelling blade) or off (dota cursor).</li>
-            </ul>
-            <p>With tree overlay on, click trees to toggle their cut state. Affects vision simulation.</p>
-            <ul>
-            <li><strong>Place Ward</strong>- Toggle to place observer or sentry.</li>
-            </ul>
-            <p>Click wards to remove them.</p>
-            <ul>
-            <li><strong>Measure</strong>- Toggle between line or circle.</li>
-            </ul>
-            </li>
-            </ul>
-            <h2 id="settings-menu">Settings Menu</h2>
-            <p>Opened from the cog in the toolbar.</p>
-            <ul>
-            <li><p><strong>Mode Options</strong> - Same as in toolbar.</p>
-            </li>
-            <li><p><strong>Lane Animation</strong> - Toggle lane animation overlay.</p>
-            </li>
-            <li><p><strong>Radius</strong> - Vision simulation radius.</p>
-            </li>
-            <li><p><strong>Night</strong> - Toggles day/night for building vision simulation.</p>
-            </li>
-            <li><p><strong>Darkness</strong> - Toggles darkness for vision simulation.</p>
-            </li>
-            <li><p><strong>MS</strong> - Movement speed. Used in measure mode for calculating travel time.</p>
-            </li>
-            <li><p><strong>Version</strong> - Select map data version.</p>
-            </li>
-            <li><p><strong>Reset Map</strong></p>
-            </li>
-            </ul>
-            <h2 id="right-overlay-menu">Right Overlay Menu</h2>
-            <p>Toggle map overlays.</p>
-            <ul>
-            <li><p><strong>Overlays</strong></p>
-            </li>
-            <li><p><strong>Structures</strong></p>
-            </li>
-            <li><p><strong>Neutral</strong></p>
-            </li>
-            <li><p><strong>Vision Range</strong></p>
-            </li>
-            <li><p><strong>Base Layers</strong></p>
-            </li>
-            </ul>
-            
+            <!-- @include ../www/help.html -->
         </div>
     </div>
     <div id="about" class="modal modal-close">
@@ -272,7 +223,19 @@
             <a href="https://github.com/devilesk/dota-interactive-map">GitHub</a>
         </div>
     </div>
+    <!-- @if NODE_ENV!='production' -->
     <script src="bundle.js"></script>
     <script>InteractiveMap("tiles/", "img/map_data.png")</script>
+    <!-- @endif -->
+    <!-- @if NODE_ENV='production' !>
+    <script>
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+    ga('create', '<!-- @echo google_analytics !>', 'auto');
+    ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <script src="bundle-<!-- @echo COMMIT_HASH !>.min.js"></script>
+    <script>InteractiveMap("<!-- @echo map_data_path !>", "<!-- @echo vision_data_image_path !>")</script>
+    <!-- @endif -->
   </body>
 </html>
