--- a/www/index.html
+++ b/www/index.html
@@ -268,7 +268,7 @@
         <div class="modal-content">
             <span id="about-close" class="close">&times;</span>
             <p>Interactive Map v<span id="releaseTag"></span></p>
-            <p>Last updated on <span id="buildDate"></span></p>
+            <p>Last updated: <span id="buildDate"></span></p>
             <a href="https://github.com/devilesk/dota-interactive-map">GitHub</a>
         </div>
     </div>
