update development build script

--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,7 @@
                 
         <!-- @if NODE_ENV!='production' -->
         <script src="bundle.js"></script>
-        <script>InteractiveMap("tiles/", "img/map_data_707.png")</script>
+        <script>InteractiveMap.default("tiles/", "img/map_data_707.png")</script>
         <!-- @endif -->
         <!-- @if NODE_ENV='production' !>
         <script src="bundle-<!-- @echo COMMIT_HASH !>.min.js"></script>
