--- a/src/index.html
+++ b/src/index.html
@@ -225,6 +225,7 @@
             <p>Interactive Map v<span id="releaseTag"></span></p>
             <p>Last updated: <span id="buildDate"></span></p>
             <a href="https://github.com/devilesk/dota-interactive-map">GitHub</a>
+            <p>Build: <span id="codeVersion"></span></p>
         </div>
     </div>
     <div class="coordinates-container">
