--- a/www/index.html
+++ b/www/index.html
@@ -274,6 +274,7 @@
             <p>Interactive Map v<span id="releaseTag"></span></p>
             <p>Last updated: <span id="buildDate"></span></p>
             <a href="https://github.com/devilesk/dota-interactive-map">GitHub</a>
+            <p>Build: <span id="codeVersion"></span></p>
         </div>
     </div>
     <div class="coordinates-container">
@@ -283,6 +284,6 @@
             
                 
         <script src="bundle.js"></script>
-        <script>InteractiveMap("tiles/", "img/map_data_707.png")</script>
+        <script>InteractiveMap.default("tiles/", "img/map_data_707.png")</script>
     </body>
 </html>
