use rollup for builds

--- a/www/index.html
+++ b/www/index.html
@@ -296,6 +296,6 @@
             
                 
         <script src="bundle.js"></script>
-        <script>InteractiveMap.default("tiles/", "img/map_data_715.png")</script>
+        <script>InteractiveMap("tiles/", "img/map_data_715.png", "715")</script>
     </body>
 </html>
