generate menu dynamically

--- a/www/index.html
+++ b/www/index.html
@@ -86,14 +86,7 @@
                 <hr>
                 <div class="menu-item">
                     <label class="select-label" for="version-select">Version</label><!--
-                     --><select id="version-select">
-                        <option value="715">7.15</option>
-                        <option value="709">7.09</option>
-                        <option value="707">7.07</option>
-                        <option value="706">7.06</option>
-                        <option value="700">7.00</option>
-                        <option value="688">6.88</option>
-                    </select>
+                     --><select id="version-select"></select>
                 </div>
                 <hr>
                 <div class="menu-item">
@@ -165,38 +158,7 @@
                     <div class="menu-item">
                         <input type="radio" id="base-menu-toggle" name="right-menu" value="base" />
                         <label for="base-menu-toggle" class="root checkbox inverse">Base Layers</label>
-                        <div id="base-menu" class="menu-item-group sub-menu"><!--
-                         --><div class="menu-item">
-                                <input type="radio" name="base-type" value="715" id="base-715-option" checked />
-                                <label for="base-715-option" class="checkbox">7.15</label>
-                                <div id="base-715-menu" class="menu-item-group sub-menu"></div>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="radio" name="base-type" value="709" id="base-709-option" />
-                                <label for="base-709-option" class="checkbox">7.09</label>
-                                <div id="base-709-menu" class="menu-item-group sub-menu"></div>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="radio" name="base-type" value="707" id="base-707-option" />
-                                <label for="base-707-option" class="checkbox">7.07</label>
-                                <div id="base-707-menu" class="menu-item-group sub-menu"></div>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="radio" name="base-type" value="706" id="base-706-option" />
-                                <label for="base-706-option" class="checkbox">7.06</label>
-                                <div id="base-706-menu" class="menu-item-group sub-menu"></div>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="radio" name="base-type" value="700" id="base-700-option" />
-                                <label for="base-700-option" class="checkbox">7.00</label>
-                                <div id="base-700-menu" class="menu-item-group sub-menu"></div>
-                            </div><!--
-                         --><div class="menu-item">
-                                <input type="radio" name="base-type" value="688" id="base-688-option" />
-                                <label for="base-688-option" class="checkbox">6.88</label>
-                                <div id="base-688-menu" class="menu-item-group sub-menu"></div>
-                            </div>
-                        </div>
+                        <div id="base-menu" class="menu-item-group sub-menu"></div>
                     </div>
                 </div>
             </div>
