--- a/www/index.html
+++ b/www/index.html
@@ -367,6 +367,6 @@
                 
         <script src="https://openlayers.org/en/v5.2.0/build/ol.js"></script>
         <script src="bundle.js"></script>
-        <script>new InteractiveMap("tiles/", "img/map_data_720.png", "720")</script>
+        <script>new InteractiveMap("//cdn.devilesk.com/", "img/map_data_720.png", "720")</script>
     </body>
 </html>
